--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.13.2",
     "framer-motion": "^12.23.26",
     "jodit-react": "^5.2.38",
+    "nodemailer": "^8.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
