--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.11.0",
     "react-toastify": "^11.0.5",
+    "resend": "^6.9.1",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
